# liblicense-gnome

./: AUTHORS  Makefile.am  README  acinclude.m4  autogen.sh  configure.ac  liblicense-gnome.spec
src/: Makefile.am  default-content-license.desktop  default-content-license.in  emblem-cc.icon  emblem-licensed.icon  gui_gtk.py.in  nautilus-liblicense.py
